[package]
name = "maud-pulldown-cmark"
version = "0.0.7"
authors = ["Wim Looman <wim@nemo157.com>"]
description = "An adapter between maud and pulldown-cmark"

documentation = "https://nemo157.com/maud-pulldown-cmark"
homepage = "https://nemo157.com/maud-pulldown-cmark"
repository = "https://git.nemo157.com/rust/maud-pulldown-cmark"

readme = "README.md"
keywords = ["maud", "markdown", "pulldown-cmark", "adapter"]

license = "MIT/Apache-2.0"

[features]
default = []
nightly = ["maud_macros", "clippy"]

[dependencies]
pulldown-cmark = "0.0.5"
maud = { git = "https://github.com/lfairy/maud" }
maud_macros = { git = "https://github.com/lfairy/maud", optional = true } # remove-for-crates.io
clippy = { version = "*", optional = true } # remove-for-crates.io
