[package]
name = "maud-pulldown-cmark"
version = "0.2.2"
authors = ["Wim Looman <wim@nemo157.com>"]
description = "An adapter between maud and pulldown-cmark"

documentation = "https://nemo157.com/maud-pulldown-cmark"
homepage = "https://nemo157.com/maud-pulldown-cmark"
repository = "https://git.nemo157.com/rust/maud-pulldown-cmark"

readme = "README.md"
keywords = ["maud", "markdown", "pulldown-cmark", "adapter"]

license = "MIT/Apache-2.0"

build = "build.rs"

[features]
default = []
nightly = ["maud_macros"]

[dependencies]
pulldown-cmark = "0.0.8"
maud = "0.11.0"
# Should be a dev-dependency, but they're not supported with features
maud_macros = { version = "0.11.0", optional = true }

[build-dependencies]
skeptic = "0.6"

[dev-dependencies]
skeptic = "0.6"
